Update for JDK 16, partially modularize