@@ -1,8 +1,8 @@
 import org.cadixdev.gradle.licenser.LicenseExtension
 
 plugins {
-    id("io.github.gradle-nexus.publish-plugin") version "1.0.0"
-    id("org.cadixdev.licenser") version "0.5.1" apply false
+    id("io.github.gradle-nexus.publish-plugin") version "1.1.0"
+    id("org.cadixdev.licenser") version "0.6.1" apply false
 }
 
 subprojects {
@@ -13,7 +13,7 @@ subprojects {
     }
 
     configure<LicenseExtension> {
-        header = rootProject.file("HEADER.txt")
+        header(rootProject.file("HEADER.txt"))
         (this as ExtensionAware).extra.apply {
             for (key in listOf("organization", "url")) {
                 set(key, rootProject.property(key))
@@ -24,14 +24,6 @@ subprojects {
     plugins.withId("java") {
         configure<JavaPluginExtension> {
             toolchain.languageVersion.set(JavaLanguageVersion.of(16))
-        }
-
-        tasks.withType<JavaCompile>().configureEach {
-            options.forkOptions.jvmArgs = listOf("--illegal-access=warn")
-        }
-
-        tasks.withType<Test>().configureEach {
-            jvmArgs("--illegal-access=warn")
         }
     }
 }
